[sysconfig] Translation for last modified date tooltip

--- a/modules-available/sysconfig/templates/list-modules.html
+++ b/modules-available/sysconfig/templates/list-modules.html
@@ -12,7 +12,7 @@
 					{{#modules}}
 					<tr>
 						<td class="badge text-nowrap">{{moduleType}}</td>
-						<td data-id="{{id}}" class="modrow slx-pointer" width="100%" title="{{dateline_s}}">
+						<td data-id="{{id}}" class="modrow slx-pointer" width="100%" title="{{lang_lastEdited}} {{dateline_s}}">
 							<table class="slx-ellipsis"><tr><td>{{title}}</td></tr></table>
 						</td>
 						<td class="text-nowrap">
