[statistics] Handle system an mainboard model separately
...especially for BIOS updates checks...

--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -199,8 +199,12 @@
 						</td>
 					</tr>
 					<tr>
-						<td class="text-nowrap">{{lang_model}}</td>
-						<td>{{pcmodel}} ({{manufacturer}})</td>
+						<td class="text-nowrap">{{lang_pcmodel}}</td>
+						<td>{{pcmodel}} ({{pcmanufacturer}})</td>
+					</tr>
+					<tr>
+						<td class="text-nowrap">{{lang_mobomodel}}</td>
+						<td>{{mobomodel}} ({{mobomanufacturer}})</td>
 					</tr>
 					{{#biosdate}}
 					<tr>
