[serversetup-bwlp-ipxe] Show default selection of inherited menu

--- a/modules-available/serversetup-bwlp-ipxe/templates/menu-assign-location.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/menu-assign-location.html
@@ -25,7 +25,10 @@
 			<td>
 				<i>{{lang_useDefaultMenu}}</i>
 			</td>
-			<td>{{defaultMenu}}</td>
+			<td>
+				{{defaultMenu.title}}
+				<div class="small text-muted">{{defaultMenu.defaultEntry.title}}</div>
+			</td>
 		</tr>
 		{{#list}}
 			<tr>
