[serversetup-bwlp-ipxe] Use badge for refcount in bootentry table

--- a/modules-available/serversetup-bwlp-ipxe/templates/bootentry-list.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/bootentry-list.html
@@ -32,7 +32,9 @@
 				{{hotkey}}
 			</td>
 			<td align="right">
-				{{refs}}
+				{{#refs}}
+				<span class="badge">{{refs}}</span>
+				{{/refs}}
 			</td>
 			<td align="center">
 				<a href="?do=serversetup&amp;show=editbootentry&amp;id={{entryid}}" class="btn btn-xs btn-default">
