[statistics] Show RAM manufacturer; add JEDEC DB & parser

--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -247,7 +247,7 @@
 						<td>
 							{{ramslotcount}}:
 							{{#ramslot}}
-							[ {{size}} ]
+							[ <span title="{{manuf}}">{{size}}</span> ]
 							{{/ramslot}}
 						</td>
 					</tr>
