--- a/modules-available/roomplanner/templates/svg-plan.html
+++ b/modules-available/roomplanner/templates/svg-plan.html
@@ -33,7 +33,7 @@
 			<stop offset="100%" stop-color="#b55" />
 		</radialGradient>
 	</defs>
-	<g transform="translate({{shiftX}}, {{shiftY}}) rotate({{rotate}} {{centerX}} {{centerY}})">
+	<g transform="rotate({{rotate}} {{centerX}} {{centerY}}) translate({{shiftX}} {{shiftY}})">
 		<line x1="{{line.x1}}" y1="{{line.y1}}"
 				x2="{{line.x2}}" y2="{{line.y2}}"
 				style="stroke:#555;stroke-width:.2;opacity:.5" />
