[roomplanner] Make highlight green, not red

--- a/modules-available/roomplanner/templates/svg-plan.html
+++ b/modules-available/roomplanner/templates/svg-plan.html
@@ -29,8 +29,8 @@
 			<stop offset="100%" stop-color="#000" />
 		</radialGradient>
 		<radialGradient id="screenhl" cx=".4" cy=".3" r="1">
-			<stop offset="0%" stop-color="#f83" />
-			<stop offset="100%" stop-color="#b55" />
+			<stop offset="0%" stop-color="#afa" />
+			<stop offset="100%" stop-color="#074" />
 		</radialGradient>
 	</defs>
 	<g transform="rotate({{rotate}} {{centerX}} {{centerY}}) translate({{shiftX}} {{shiftY}})">
