--- a/modules-available/roomplanner/templates/footer.html
+++ b/modules-available/roomplanner/templates/footer.html
@@ -28,14 +28,14 @@ document.addEventListener("DOMContentLoaded", function () {
 	roomConfiguration = {{{roomConfiguration}}};
 
 	$.when(
-		$.getScript("modules/roomplanner/js/lib/jquery-collision.js"),
-		$.getScript("modules/roomplanner/js/lib/jquery-ui-draggable-collision.js"),
-		$.getScript("modules/roomplanner/js/grid.js"),
+		$.cachedScript("modules/roomplanner/js/lib/jquery-collision.js"),
+		$.cachedScript("modules/roomplanner/js/lib/jquery-ui-draggable-collision.js"),
+		$.cachedScript("modules/roomplanner/js/grid.js"),
 		$.Deferred(function( deferred ){
 			$( deferred.resolve );
 		})
 	).done(function() {
-		$.getScript("modules/roomplanner/js/init.js", function() {
+		$.cachedScript("modules/roomplanner/js/init.js", function() {
 			initRoomplanner();
 			loadRoom();
 		});
