[roomplanner] First prototype of composed room editor
Saving/loading works, but no entry is generated for pvs.ini.
Also this approach fails to meaningfully handle rooms
with two removable walls where you also want to use both
possible combinations of two combined rooms and a single one.

--- a/modules-available/roomplanner/style.css
+++ b/modules-available/roomplanner/style.css
@@ -23,6 +23,41 @@ body {
 
 /* end full screen changes */
 
+/* sort mode for composed rooms */
+
+#roomsort div.img {
+	border: none;
+}
+
+div.box1 {
+	padding: 2px;
+}
+
+div.horizontal div.box1 {
+	float: left;
+	display: inline-table;
+}
+
+div.horizontal div.name {
+	width: 5px;
+	overflow: visible;
+	height: 1em;
+}
+
+div.vertical div.box2 {
+	float: left;
+}
+
+div.vertical div.name {
+	float: right;
+}
+
+div.vertical div.img {
+	float: left;
+}
+
+/* end sort mode for composed rooms */
+
 #drawpanel {
 	position:relative;}
 
