[roomplanner] Support creating recursive/composed rooms

--- a/modules-available/roomplanner/templates/edit-composed-room.html
+++ b/modules-available/roomplanner/templates/edit-composed-room.html
@@ -31,7 +31,7 @@
 								<div class="name text-nowrap small">{{locationname}}</div>
 								<div class="img">
 									<input type="hidden" class="sort-val" name="sort[{{locationid}}]">
-									<img src="api.php?do=roomplanner&amp;show=svg&amp;locationid={{locationid}}&amp;scale=2.2">
+									<img src="api.php?do=roomplanner&amp;show=svg&amp;locationid={{locationid}}&amp;scale=2.2&amp;fallback=1">
 								</div>
 								<div class="clearfix"></div>
 							</div>
