[dnbd3] proxy view: Show cache-map when clicking percentage of image
Requires up to date DNBD3-Server

--- a/modules-available/dnbd3/templates/page-proxy-stats.html
+++ b/modules-available/dnbd3/templates/page-proxy-stats.html
@@ -1,11 +1,15 @@
 <div class="panel panel-default">
 	<div class="panel-body">
+		<div class="pull-right">
+			{{lang_uptime}}: <b>{{uptime_s}}</b>
+		</div>
 		<div>
 			{{lang_sessionTx}}: <b>{{bytesSent_s}}</b>
-			––
+			–
 			{{lang_sessionRx}}: <b>{{bytesReceived_s}}</b>
-			––
-			{{lang_uptime}}: <b>{{uptime_s}}</b>
+			{{#ratio}}
+			&ensp; ({{lang_ratio}}: {{ratio}})
+			{{/ratio}}
 		</div>
 		<div>
 			{{lang_storageSize}}: <b>{{spaceTotal_s}}</b>
