[sysconfig] Make both buttons white on finishing system config
The blue "set as global config" button was too tempting to click after
creating or editing a system config. Accidentally setting location
specific config as globally active easily happened.

--- a/modules-available/sysconfig/templates/cfg-finish.html
+++ b/modules-available/sysconfig/templates/cfg-finish.html
@@ -7,9 +7,10 @@
 	<input type="hidden" name="action" value="config">
 	<input type="hidden" name="activate" value="{{configid}}">
 	<div class="text-right">
-		<div class="btn-group">
-			<a href="?do=SysConfig" class="btn btn-default">{{lang_backToSysconfig}}</a>
-			<button type="submit" class="btn btn-primary">{{lang_activateGlobally}}</button>
-		</div>
+		<a href="?do=SysConfig" class="btn btn-default">&laquo; {{lang_backToSysconfig}}</a>
+		<button type="submit" class="btn btn-default">
+			<span class="glyphicon glyphicon-globe"></span>
+			{{lang_activateGlobally}}
+		</button>
 	</div>
 </form>
